# cheminfopy

./: .bumpversion.cfg  .cruft.json  .flake8  .pre-commit-config.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  precommit.yml  release_me.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
src/c6h6py/: manager.py  request.py
src/c6h6py/managers/: manager.py  sample.py
src/cheminfopy/: __init__.py  constants.py  errors.py  request.py  version.py  zenodo.py
src/cheminfopy/managers/: __init__.py  experiment.py  manager.py  sample.py  token.py  user.py  utils.py
tests/: test_utils.py
