[tool.poetry]
name = "cheminfopy"
version = "0.7.0"
description = "cheminfopy is a SDK that provides a high-level interface to the rest-on-couch API that powers the cheminfo ELN"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cheminfo-py/cheminfopy"
repository = "https://github.com/cheminfo-py/cheminfopy"
keywords = ["ELN", "API", "data", "chemistry"]
authors = ["Kevin M. Jablonka <kevin.jablonka@epfl.ch>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^22.1"
isort = "^5.10.1"
jupyterlab = "^3.3.0"
Sphinx = "^3.5.1"
sphinx-book-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-copybutton = "^0.5.0"
pylint = "^2.13.0"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
