##########################
# Setup.py Configuration #
##########################
[metadata]
name = cheminfopy
version = 0.8.0
description = Python SDK for interacting with the cheminfo ELN
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cheminfo-py/cheminfopy
download_url = https://github.com/cheminfo-py/cheminfopy/releases
project_urls =
    Bug Tracker = https://github.com/cheminfo-py/cheminfopy/issues
    Source Code = https://github.com/cheminfo-py/cheminfopy

# Author information
author = Kevin M. Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin M. Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    eln
    cheminfo
    api

[options]
install_requires =
    requests
    natsort
    loguru

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    cheminfopy = cheminfopy.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = cheminfopy
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/cheminfopy
    .tox/*/lib/python*/site-packages/cheminfopy

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short


[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = isort
application-import-names =
    cheminfopy
    tests